--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main_miksemar.css" />
     <title>Murapay</title>
   </head>
   <body>
     <div id="main_el"></div>
     <script src="/assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/long-press-event.min.js"></script>
-    <script src="/dist/template1.js"></script>
+    <script src="/dist/template6.js"></script>
   </body>
 </html>
